@@ -1,3 +1,13 @@
+2011-11-28  Andreas Kling  <kling@webkit.org>
+
+        InspectorCSSAgent: Remove unused function inlineStyleElement().
+        <http://webkit.org/b/73221>
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/InspectorCSSAgent.cpp:
+        * inspector/InspectorCSSAgent.h:
+
 2011-11-28  Simon Hausmann  <simon.hausmann@nokia.com>
 
         [Qt] Build system fixes against V8.
